--- a/misc/api.mdx
+++ b/misc/api.mdx
@@ -24,7 +24,7 @@ The base ratelimit is 20 requests per 10 seconds. Do not hardcode any values. Us
   Epoch timestamp when the rate limit resets.
 </ResponseField>
 
-##### 429 response:
+### 429 response:
 ```json
 {
   "code": 429,
@@ -142,7 +142,7 @@ The base ratelimit is 20 requests per 10 seconds. Do not hardcode any values. Us
   A Ducky session token.
 </ResponseField>
 
-##### Discord user
+### Discord user
 
 ```json expandable lines wrap
 {
@@ -157,7 +157,7 @@ The base ratelimit is 20 requests per 10 seconds. Do not hardcode any values. Us
 }
 ```
 
-##### Roblox user
+### Roblox user
 
 ```json expandable lines wrap
 {
