--- a/modules/Departments.mdx
+++ b/modules/Departments.mdx
@@ -18,10 +18,10 @@ This page provides the essential configuration options for Ducky’s **Departmen
 
 ### Features of The Departments Module
 
-  #### Username Syncing
+  ### Username Syncing
     To enable username syncing, you need to navigate to the same drop-down where you linked your department and select **Toggle Sync Names**. Then, choose the department you want to sync usernames with. 
   
-  #### Cross-Banning
+  ### Cross-Banning
     When cross-ban is enabled, running the `/ban` command will automatically ban the user from the server they are in and all departments. 
 
     The **Departmental** field is required to be set to **True** in order for this command to work. If it is set to off, it will not work.
@@ -30,7 +30,7 @@ This page provides the essential configuration options for Ducky’s **Departmen
       You cannot cross-unban somebody from all linked servers using Ducky; you must unban them from each server they were banned in manually.
     </Warning>
   
-  #### Linked Roles
+  ### Linked Roles
     In essence, if a member has a role in the Host server, Ducky will give the linked role in the Department Server and vice versa
 
     1. Navigate to the drop-down menu and select "**Create Linked Role**".
