--- a/modules/RobloxVerification.mdx
+++ b/modules/RobloxVerification.mdx
@@ -10,7 +10,7 @@ This page provides the essential configuration options for Ducky's **Roblox Veri
 ### Verified Nickname
   **Verified Nicknames** are the nicknames that are assigned to a member once they complete the verification.
 
-  #### Verified Nickname Variables
+  ### Verified Nickname Variables
 
   The Verified Nicknames will change the users username after they've succesfully verified based on your variables.
 
