--- a/modules/automations.mdx
+++ b/modules/automations.mdx
@@ -11,23 +11,23 @@ description: "Learn how to automate your ERLC private server with Ducky."
 
 ### Creating an Automation
 
-#### Getting Started
+### Getting Started
 
 To create an automation, run the **`/automations create`** command. This will open up the **Automations Builder**, allowing you to customize your new automation.
 
-#### Adding a Name
+### Adding a Name
 
 To add an identifiable name to your automation, select the **Edit Name** option within the **Edit this Automation** dropdown menu.
 
-#### Disabling Automations
+### Disabling Automations
 
 In the event that you would like to disable this automation without deleting it, select **Disable** within the **Edit this Automation** dropdown menu.
 
-#### Results Channel
+### Results Channel
 
 Adding a **Results Channel** allows Ducky to send a message to that channel whenever an automation is sent, detailing whether an automation ran successfully or not, and which actions were run successfully or not.i
 
-#### Customize
+### Customize
 
 The **Customize** menu allows futher customization of an automation, including required roles, custom arguments, and custom slash commands.
 
