--- a/modules/economy.mdx
+++ b/modules/economy.mdx
@@ -68,19 +68,19 @@ The **initial amount** is the amount of money a user starts with. By default, th
 
 ### Collection Roles
 
-#### Role
+### Role
 
 The **role** is the role which can collect the specified amount.
 
-#### Amount
+### Amount
 
 The **amount** is the amount which can be collected each time.
 
-#### Target
+### Target
 
 The **target** is where the currency collected will go. **Wallet** will send the currency to the user's wallet (undeposited). **Bank** will send the currency to the user's bank (deposited).
 
-#### Cooldown
+### Cooldown
 
 The **cooldown** is the amount of time in between when a user can collect their currency.
 
@@ -100,41 +100,41 @@ The **Custom Replies** feature allows you to seamlessly create custom replies fo
 
 The **shop** feature allows you to create custom shop items for your users and gives the ability to purchase these items for currency in exchange for roles.
 
-#### Name
+### Name
 
 The **name** of a shop item is what will show in the shop, inventory, and anywhere else you see shop items. The name should be something easily identifiable.
 
-#### Description
+### Description
 
 The **description** of a shop item is what users see in the shop and inventory. The description should describe what the item does and what perks it gives.
 
-#### Price
+### Price
 
 The **price** of a shop item is the amount of currency it costs to purchase that item.
 
-#### Role
+### Role
 
 The **role** of a shop item is the Discord role given to the user when the item is used. This role can be functional or purely cosmetic. The role is only given to the user once they use the item.
 
-#### Use on Purchase
+### Use on Purchase
 
 **Use on purchase** determines when the user recieves the item's role. When toggled on, the user will immediately receive the role of the shop item when purchasing it. When toggled off, the user must go into their inventory and use the item.
 
-#### Message
+### Message
 
 The **message** is the message which is sent when a user purchases an item. The message is text-only.
 
-#### ID
+### ID
 
 The \*\*ID \*\*is a unique identifer for the shop ID across all Ducky servers. There is no other shop item in any Ducky server that has the same ID.
 
 ### Multipliers
 
-#### Role
+### Role
 
 The **role** is the role which is affected by the multiplier. This includes role granted by other shop items.
 
-#### Multiplier
+### Multiplier
 
 The **multiplier** is the amount which all currency of the user affected is multiplied by.
 
