--- a/modules/erlcstatus.mdx
+++ b/modules/erlcstatus.mdx
@@ -12,15 +12,15 @@ This page provides the essential configuration options for Ducky's **ERLC Server
 
 ### Server Status Message
 
-#### Channel
+### Channel
 
 The **Channel** is a configurable setting in the **`/setup`** page, this is where your **ERLC Server Status Message** will be sent.
 
-#### Link
+### Link
 
 The **Link** option is a non-configurable option which just displays a quick-link to your **ERLC Server Status Message**.
 
-#### Content
+### Content
 
 The **Content** setting is where you configure how you want your **ERLC Server Status Message** to look like. You are able to configure the embed and message to your liking.
 
