--- a/modules/tickets.mdx
+++ b/modules/tickets.mdx
@@ -34,7 +34,7 @@ The embed selection is the embed that will be displayed in the set channel. You 
 
 The ticket subjects are what the members interact with. These can be fully customized with different Support Roles, Mentionables, Categories, and more.
 
-#### Ticket Subject Builder
+### Ticket Subject Builder
 
 **Name**\
 The name is the name that the ticket subject will be called. This is seen publicly on the ticket embed.
