--- a/modules/a-examples-and-templates.mdx
+++ b/modules/a-examples-and-templates.mdx
@@ -4,7 +4,7 @@ title: "Examples And Templates"
 
 ### This page is not intended for release. Place templates and other copy-and-pasted elements here
 
-#### Ducky Plus+ Promotion Message
+### Ducky Plus+ Promotion Message
 
 <Callout icon="/icons/duckyplus.png" iconType="regular" color="#d706eb">
   Ducky provides \_ for free users. Upgrade to Ducky Plus+ to receive \_.
