--- a/overview/changelogs.mdx
+++ b/overview/changelogs.mdx
@@ -12,7 +12,7 @@ As of v1.6.0 Stable, we're moving our detailed changelogs from Discord to our do
     **The first update of 2026 is here!** We've been working on v1.6.0 Stable for a while now, and after weeks of testing, development, and even more testing, it's finally ready.
 
     Here's what's new in **v1.6.0 Stable**:
-    #### Automations
+    ### Automations
     - We've added **3 new actions** to **Automations**:
         - **Lock Channel:** Lock a specified channel.
         - **Unlock Channel:** Unlock a specified channel.
@@ -21,7 +21,7 @@ As of v1.6.0 Stable, we're moving our detailed changelogs from Discord to our do
             The **Re-check Conditions** action requires a **Delay** action prior to it.
         </Warning>
 
-    #### ERLC Playtime Rewards
+    ### ERLC Playtime Rewards
     - Our new **ERLC Playtime** bridge between **Usersettings** and the **ERLC Integration** module is here, bringing you the ability to reward and track your most active players.
     - You can now configure playtime rewards via the **ERLC Integration** page. For more information, check out the [documentation](/modules/erlcintegration.mdx).
     - Members are able to opt-out of playtime tracking via **`/usersettings`** -> **Edit settings...** -> **Toggle Track Playtime**.
@@ -29,41 +29,41 @@ As of v1.6.0 Stable, we're moving our detailed changelogs from Discord to our do
         The member must also have their Roblox account linked to Ducky in order to track playtime.
     </Warning>
 
-    #### Components Editor
+    ### Components Editor
     - Our new **Components Editor** is now available via the **`/message`** command.
     - The **Components Editor** allows you to add buttons, dropdowns, and more with message responses determined by exportables.
     - This was a very highly-requested feature by the community, and we're excited to finally bring it to you.
     - You'll soon be able to use this in other places such as welcome messages in a future update.
 
-    #### Improved Builders
+    ### Improved Builders
     - We've started using **Modals v2** for our builders. This update marks the start of this transition, so keep in mind that not all builders are completely transferred to Modals v2.
     - Modals v2 offers many clean and useful components such as option, role, and channel dropdowns, text inputs, checkboxes (soon...), and more.
     - We're also using better labels for the different options. For example, instead of asking the user for **Required Role**, it asks, **What role should be required to use this shift type?**
     - The transition can already be found in places such as the **Economy**, **Shift Management**, and **ERLC Integration** pages of **`/setup`**.
 
-    #### On-Shift Nickname Prefix
+    ### On-Shift Nickname Prefix
     - You can now add an on-shift nickname prefix that will automatically be appended to member's nicknames when they go on-shift.
     - This can be edited via the **Shift Type Builder** on the **`/setup`** -> **Shift Management** page.
 
-    #### Coinflip and Reminders
+    ### Coinflip and Reminders
     - The new **`/coinflip`** command lets you flip a coin and determine heads or tails.
     - The new **`/reminders list|set|cancel`** command lets you manage your own reminders. You'll automatically be reminded via DMs when it's time to be reminded.
 
-    #### Ticket Close Reason & Transcript Fixes
+    ### Ticket Close Reason & Transcript Fixes
     - We've resolved issues regarding 0-byte or empty transcripts. This issue was caused by deleting the ticket too fast, which meant that it was being deleted while the transcript was being generated.
     - You can now include a **close reason** which will be sent along with the transcript to the opener.
     - Additionally, the category name limit has been bumped from 25 -> 50.
 
-    #### Discord Staff Immunity
+    ### Discord Staff Immunity
     - You can now toggle **Staff Immunity** on the **Discord Moderation** page of **`/setup`**.
     - When enabled, this prevents your staff members from moderating eachother. This is disabled by default.
 
-    #### Joingate & Direct Welcome Message
+    ### Joingate & Direct Welcome Message
     - Welcome/AutoRoles is now Welcome/Autoroles. Huge change, we know.
     - You can now configure a **Direct Welcome Message**, which is automatically sent via the member's DMs when they join.
     - You can also configure a **Joingate** for your server, which automatically kicks users who have an account younger than the **Joingate Threshold**.
 
-    #### Exportable Cross-Type Support
+    ### Exportable Cross-Type Support
     - You can now import exportables of different types than what you need.
     - For example, if you have an **Embed** exportable but you want to import it into the **Message Editor**, you can do just that, and it will automatically transform the data structure appropriately.
 
@@ -71,32 +71,32 @@ As of v1.6.0 Stable, we're moving our detailed changelogs from Discord to our do
         Exportables of the **Panel** type can still only be imported into the **Ticket Panel Builder**.
     </Warning>
 
-    #### Role Command Toggles
+    ### Role Command Toggles
     - The **`d!role`** command no longer needs you to specify a subcommand such as `add` or `remove`.
     - If no subcommand is provided, it will now **toggle** the role on the member.
     - For example, if the **@troptopreal** already has the **Quacker** role and **`d!role troptopreal Quacker`** is used, the **Quacker** role will be **removed** from **@troptopreal**.
 
-    #### Membercount Goal Projection
+    ### Membercount Goal Projection
     - The **`/membercount`** command now has an optional **`goal`** argument.
     - This will show an approximation of how long/when the server will hit that amount of members.
     <Warning>
         This is **not** guaranteed to be 100% accurate, but is rather a rough estimate.
     </Warning>
 
-    #### Whitelisted Antiping Channels
+    ### Whitelisted Antiping Channels
     - You can now configure specific channels where antiping will not be triggered.
 
-    #### Editable Verification Panels
+    ### Editable Verification Panels
     - You can now edit your **Roblox Verification Panel** instead of having to recreate a new one every time.
 
-    #### Careers Page
+    ### Careers Page
     - We've added a [**Careers**](https://duckybot.xyz/careers) page to our website, which displays requirements and the application for the position.
 
-    #### Documentation Progress
+    ### Documentation Progress
     - We're making progress on writing our [**Documentation**](/overview/welcome.mdx) as our team of **Docwriters** continues to grow.
     - All existing pages will be kept up-to-date, and are up-to-date right now.
 
-    #### Quality of Life Changes
+    ### Quality of Life Changes
     - Renamed **Welcome/AutoRoles** -> **Welcome/Autoroles**
     - Renamed **Discord Server Status** -> **Discord Server Statistics**
     - Added markdown string to **`/emoji view`**
@@ -110,7 +110,7 @@ As of v1.6.0 Stable, we're moving our detailed changelogs from Discord to our do
     - Autoresponders now mention on reply
     - Automations are now executed asynchronously to prevent the **Delay** action from affecting the server's ERLC server status messages, channels, logs, etc.
 
-    #### Bug Fixes
+    ### Bug Fixes
     - Resolved issues with 0-byte/empty ticket transcripts
     - Resolved issues with web ticket transcripts failing to load due to expired cookies
     - Resolved issues with completely inaccurate timestamps on web transcript messages
