more api documentation

--- a/api/information/ratelimits.mdx
+++ b/api/information/ratelimits.mdx
@@ -1,6 +1,8 @@
 ---
 title: 'Ratelimits'
 description: 'Learn how to handle ratelimits while using our API.'
+icon: "gauge-max"
+iconType: "solid"
 ---
 
 The base ratelimit is 20 requests per 10 seconds. Do not hardcode any values— instead, use the following headers which are found in every response:
