--- a/api/information/responses.mdx
+++ b/api/information/responses.mdx
@@ -1,6 +1,8 @@
 ---
 title: 'Responses'
 description: 'Learn how all of our API responses are structured.'
+icon: "brackets-curly"
+iconType: "solid"
 ---
 
 All of our API responses are structured in the same way, providing consistency across endpoints. The following fields are included:
