--- a/api/endpoints/links.mdx
+++ b/api/endpoints/links.mdx
@@ -33,6 +33,13 @@ api: "GET /links/{id}"
 }
 ```
 
+```json 404
+{
+  "code": 404,
+  "message": "Link not found."
+}
+```
+
 </ResponseExample>
 
 ### Parameter Fields
