--- a/api/endpoints/internal/feedback.mdx
+++ b/api/endpoints/internal/feedback.mdx
@@ -16,10 +16,10 @@ api: "GET /feedback"
       "rating": 5,
       "timestamp": 1764425716,
       "submitter": {
-        "avatar": "https://cdn.discordapp.com/avatars/846014201008619550/c1bd7719f2736e6191efa56efffd616e.png",
         "username": "sami.6rk",
+        "name": "𝓼𝓪𝓶𝓲",
         "id": "846014201008619550",
-        "name": "𝓼𝓪𝓶𝓲"
+        "avatar": "https://cdn.discordapp.com/avatars/846014201008619550/c1bd7719f2736e6191efa56efffd616e.png"
       },
     }
     // ...
