--- a/api/endpoints/data/GET/guilds.mdx
+++ b/api/endpoints/data/GET/guilds.mdx
@@ -6,7 +6,7 @@ api: "GET /guilds"
 
 <ResponseExample>
 
-```json 200 (Discord User)
+```json 200
 {
     "code": 200,
     "message": "Guilds for '598958193032560642' fetched successfully.",
