api: update docs

--- a/api/information/ratelimits.mdx
+++ b/api/information/ratelimits.mdx
@@ -16,7 +16,7 @@ The base ratelimit is 20 requests per 10 seconds. Do not hardcode any values— 
 </ResponseField>
 
 <ResponseField name="X-RateLimit-Reset" type="number">
-  The epoch timestamp (in seconds) of when the ratelimit will reset.
+  An epoch timestamp (in seconds) representing when the ratelimit will reset.
 </ResponseField>
 
 The following body is also provided when the ratelimit is hit:
