--- a/api/endpoints/internal/GET/statistics.mdx
+++ b/api/endpoints/internal/GET/statistics.mdx
@@ -11,10 +11,9 @@ api: "GET /statistics"
   "code": 200,
   "message": "Bot statistics were fetched successfully.",
   "data": {
-    "guilds": 10418,
-    "users": 779795,
-    "links": 38074,
-    "version": "v1.6.0 Stable"
+    "guilds": 10597,
+    "users": 796787,
+    "links": 38577
   }
 }
 ```
@@ -32,7 +31,3 @@ api: "GET /statistics"
 <ResponseField name="links" type="number">
   The amount of links Ducky is in.
 </ResponseField>
-<ResponseField name="version" type="string">
-  The current running version of Ducky.
-</ResponseField>
-
