--- a/api/information/responses.mdx
+++ b/api/information/responses.mdx
@@ -24,10 +24,9 @@ All of our API responses are structured in the same way, providing consistency a
   "code": 200,
   "message": "Bot statistics were fetched successfully.",
   "data": {
-    "links": 37975,
-    "users": 777906,
-    "guilds": 10403,
-    "version": "v1.6.0 Stable"
+    "guilds": 10597,
+    "users": 796787,
+    "links": 38577
   }
 }
 ```
